Bug 456442 - No blur after short time working in plasma under wayland
Summary: No blur after short time working in plasma under wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-07-07 11:11 UTC by Robby Engelmann
Modified: 2022-07-14 13:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2022-07-07 11:11:06 UTC
SUMMARY
No blur after short time working in plasma under wayland. This is true for plasma pop-ups, plasma widgets activated from panel and menus after right-click


STEPS TO REPRODUCE
1. install git-master rpms, start into wayland session (X11 not tested)
2. activate multiple widgets where you expect blurred background

OBSERVED RESULT
- works shortly, but then often no blurred background but transparent window appears

EXPECTED RESULT
always blur not transparent

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220706
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.9-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO
System Version: Not Applicable
Comment 1 Robby Engelmann 2022-07-11 08:05:13 UTC
Tested it in X11 session and there it is working fine
Comment 2 Nate Graham 2022-07-13 20:16:39 UTC
Confirmed, will be fixed with https://invent.kde.org/plasma/kwayland-integration/-/merge_requests/26.
Comment 3 Nate Graham 2022-07-14 13:37:12 UTC
Git commit ef6386250f87d1868b52fea3be2f00bbde7c2ba0 by Nate Graham, on behalf of Xuetian Weng.
Committed on 14/07/2022 at 13:37.
Pushed by ngraham into branch 'master'.

Fix blur/contrast region not getting updated

There is a misunderstanding of current blur protocol in the previous fix.
The update{Blur/Contrast}Region is only triggered by setting a new blur
object, which essentially ignore update the future update of blur
region.

This tries to restore the old behavior, by always creating a new blur
object, but always make sure we destroy them when being replaced.

M  +37   -43   src/windowsystem/windoweffects.cpp
M  +3    -5    src/windowsystem/windoweffects.h

https://invent.kde.org/plasma/kwayland-integration/commit/ef6386250f87d1868b52fea3be2f00bbde7c2ba0